[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/palladium/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/palladium/ui/hud.gd" type="Script" id=2]
[ext_resource path="res://addons/palladium/shaders/lightning_canvas.tres" type="Material" id=3]
[ext_resource path="res://addons/palladium/assets/ui/splat.png" type="Texture" id=4]
[ext_resource path="res://addons/palladium/styles/actorname_prev_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/palladium/styles/conversation_prev_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/palladium/styles/actorname_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/palladium/styles/conversation_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://addons/palladium/assets/ui/arrow_left.png" type="Texture" id=9]
[ext_resource path="res://addons/palladium/assets/ui/arrow_right.png" type="Texture" id=10]
[ext_resource path="res://addons/palladium/styles/tablet_caption_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://addons/palladium/assets/ui/32-32_white.png" type="Texture" id=12]
[ext_resource path="res://addons/palladium/assets/ui/tex_crouch_off.tres" type="Texture" id=13]
[ext_resource path="res://addons/palladium/assets/fonts/roboto.regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://addons/palladium/ui/performance_stats.gd" type="Script" id=15]
[ext_resource path="res://addons/palladium/ui/tablet.tscn" type="PackedScene" id=16]
[ext_resource path="res://addons/palladium/ui/quit_dialog.tscn" type="PackedScene" id=17]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 target_color: hint_color;
uniform float frequency = 6;
uniform float depth = 0.005;
uniform float blur_amount: hint_range(0.0, 5.0) = 3.0;
uniform float target_color_amount: hint_range(0.0, 1.0) = 0.1;

void fragment() {
	vec2 uv = SCREEN_UV;
	uv.x += sin(uv.y * frequency + TIME) * depth;
	uv.x = clamp(uv.x, 0.0, 1.0);
	vec3 c = textureLod(SCREEN_TEXTURE, uv, blur_amount).rgb;
	c = c * (1.0 - target_color_amount) + target_color.rgb * target_color_amount;
	
	COLOR.rgb = c;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/target_color = Color( 0.333333, 1, 0.827451, 1 )
shader_param/frequency = 6.0
shader_param/depth = 0.005
shader_param/blur_amount = 3.0
shader_param/target_color_amount = 0.1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.447059, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.811765, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 42
use_filter = true
font_data = ExtResource( 14 )

[node name="hud" type="Control" groups=[
"restorable_state",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="SurgeEffect" type="ColorRect" parent="."]
visible = false
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UnderwaterEffect" type="ColorRect" parent="."]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BloodSplat" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="MainHUD" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxHints" type="HBoxContainer" parent="VBoxContainer/MainHUD"]
editor/display_folded = true
margin_top = 468.0
margin_right = 1920.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="ActionHintLabel" type="Label" parent="VBoxContainer/MainHUD/HBoxHints"]
margin_right = 1920.0
margin_bottom = 32.0
size_flags_horizontal = 3
align = 1
valign = 1

[node name="QuickItemsDimmer" type="PanelContainer" parent="VBoxContainer/MainHUD"]
margin_left = 960.0
margin_top = 504.0
margin_right = 960.0
margin_bottom = 504.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 3 )

[node name="HBoxQuickItems" type="HBoxContainer" parent="VBoxContainer/MainHUD/QuickItemsDimmer"]
show_behind_parent = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxInfo" type="HBoxContainer" parent="VBoxContainer/MainHUD"]
margin_top = 508.0
margin_right = 1920.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="InfoLabel" type="Label" parent="VBoxContainer/MainHUD/HBoxInfo"]
margin_right = 1920.0
margin_bottom = 32.0
size_flags_horizontal = 3
align = 1
valign = 1

[node name="Conversation" type="ColorRect" parent="VBoxContainer"]
visible = false
margin_top = 272.0
margin_right = 1920.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.501961 )

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/Conversation"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxText" type="VBoxContainer" parent="VBoxContainer/Conversation/VBox"]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="HBoxTextPrev" type="HBoxContainer" parent="VBoxContainer/Conversation/VBox/VBoxText"]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ActorName" type="Label" parent="VBoxContainer/Conversation/VBox/VBoxText/HBoxTextPrev"]
margin_right = 958.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.290196, 0.243137, 0.243137, 1 )
text = "ActorName"
align = 2

[node name="ConversationText" type="Label" parent="VBoxContainer/Conversation/VBox/VBoxText/HBoxTextPrev"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.290196, 0.243137, 0.243137, 1 )
text = "ConversationText"
valign = 1
autowrap = true

[node name="HBoxText" type="HBoxContainer" parent="VBoxContainer/Conversation/VBox/VBoxText"]
editor/display_folded = true
margin_top = 28.0
margin_right = 1920.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ActorName" type="Label" parent="VBoxContainer/Conversation/VBox/VBoxText/HBoxText"]
margin_right = 958.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.290196, 0.243137, 0.243137, 1 )
text = "ActorName"
align = 2

[node name="ConversationText" type="Label" parent="VBoxContainer/Conversation/VBox/VBoxText/HBoxText"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "ConversationText"
valign = 1
autowrap = true

[node name="HBoxChoices" type="HBoxContainer" parent="VBoxContainer/Conversation/VBox"]
margin_top = 68.0
margin_right = 1920.0
margin_bottom = 259.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxLeft" type="VBoxContainer" parent="VBoxContainer/Conversation/VBox/HBoxChoices"]
margin_right = 637.0
margin_bottom = 191.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="VBoxChoices" type="VBoxContainer" parent="VBoxContainer/Conversation/VBox/HBoxChoices"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="ChoicesText" type="RichTextLabel" parent="VBoxContainer/Conversation/VBox/HBoxChoices/VBoxChoices"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
scroll_active = false

[node name="VBoxRight" type="VBoxContainer" parent="VBoxContainer/Conversation/VBox/HBoxChoices"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 191.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="HBoxFooter" type="HBoxContainer" parent="VBoxContainer/Conversation/VBox"]
margin_left = 957.0
margin_top = 263.0
margin_right = 962.0
margin_bottom = 268.0
rect_min_size = Vector2( 5, 5 )
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Inventory" type="ColorRect" parent="VBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.140625, 0.140625, 0.140625, 0.901961 )

[node name="ArrowLeft" type="TextureRect" parent="VBoxContainer/Inventory"]
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 206 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Inventory/ArrowLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory/ArrowLeft/HBoxContainer"]
margin_top = 87.0
margin_right = 180.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Inventory/ArrowLeft/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "B"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="InventoryContainer" type="HBoxContainer" parent="VBoxContainer/Inventory/VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="ArrowRight" type="TextureRect" parent="VBoxContainer/Inventory"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 180, 206 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Inventory/ArrowRight"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory/ArrowRight/HBoxContainer"]
margin_top = 87.0
margin_right = 180.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Inventory/ArrowRight/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "N"
align = 1
valign = 1

[node name="ActionsPanel" type="ColorRect" parent="VBoxContainer"]
visible = false
margin_top = 272.0
margin_right = 1920.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.141176 )

[node name="ActionsContainer" type="VBoxContainer" parent="VBoxContainer/ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HintLabelClose" type="Label" parent="VBoxContainer/ActionsPanel/ActionsContainer"]
margin_right = 1920.0
margin_bottom = 32.0
align = 1
valign = 1

[node name="CustomActions" type="VBoxContainer" parent="VBoxContainer/ActionsPanel/ActionsContainer"]
margin_top = 36.0
margin_right = 1920.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxMessages" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = -20.0
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxMessages"]
margin_right = 1920.0
margin_bottom = 196.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxMessages/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 11 )
text = "MESSAGE_PLEASE_WAIT"
align = 1

[node name="Label2" type="Label" parent="HBoxMessages/VBoxContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 11 )
align = 1

[node name="Label3" type="Label" parent="HBoxMessages/VBoxContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 11 )
align = 1

[node name="Crosshair" type="Control" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -21.0
margin_right = 21.0
margin_bottom = 21.0

[node name="Bottom_IMG" type="TextureRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = 4.5
margin_right = 2.5
margin_bottom = 20.5
texture = ExtResource( 12 )
expand = true

[node name="Top_IMG" type="TextureRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -20.5
margin_right = 2.5
margin_bottom = -4.5
texture = ExtResource( 12 )
expand = true

[node name="Left_IMG" type="TextureRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.5
margin_top = -2.5
margin_right = 0.5
margin_bottom = 12.5
rect_rotation = 90.0
texture = ExtResource( 12 )
expand = true

[node name="Right_IMG" type="TextureRect" parent="Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.5
margin_top = -2.5
margin_right = 24.5
margin_bottom = 12.5
rect_rotation = 90.0
texture = ExtResource( 12 )
expand = true

[node name="Info" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 0.2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainPlayer" type="HBoxContainer" parent="Info"]
margin_right = 384.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="Info/MainPlayer"]
margin_right = 384.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HealthBar" type="HBoxContainer" parent="Info/MainPlayer/Stats"]
margin_right = 384.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Info/MainPlayer/Stats/HealthBar"]
margin_right = 82.0
margin_bottom = 32.0
text = "50/100"

[node name="Progress" type="ProgressBar" parent="Info/MainPlayer/Stats/HealthBar"]
margin_left = 86.0
margin_top = 6.0
margin_right = 384.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="OxygenBar" type="HBoxContainer" parent="Info/MainPlayer/Stats"]
visible = false
margin_top = 36.0
margin_right = 384.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Info/MainPlayer/Stats/OxygenBar"]
margin_right = 82.0
margin_bottom = 32.0
text = "50/100"

[node name="Progress" type="ProgressBar" parent="Info/MainPlayer/Stats/OxygenBar"]
margin_left = 86.0
margin_top = 6.0
margin_right = 384.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 5 )
value = 50.0
percent_visible = false

[node name="Indicators" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="IndicatorCrouchPanel" type="PanelContainer" parent="Indicators"]
margin_right = 78.0
margin_bottom = 78.0

[node name="IndicatorCrouch" type="TextureRect" parent="Indicators/IndicatorCrouchPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 13 )

[node name="performance_stats" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 2
valign = 2
script = ExtResource( 15 )

[node name="Dimmer" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.140625, 0.140625, 0.140625, 0.901961 )

[node name="tablet" parent="." instance=ExtResource( 16 )]
visible = false

[node name="quit_dialog" parent="." instance=ExtResource( 17 )]
margin_right = 11.0

[node name="BloodSplatTimer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="visibility_changed" from="VBoxContainer/Inventory" to="." method="_on_Inventory_visibility_changed"]
[connection signal="timeout" from="BloodSplatTimer" to="." method="_on_BloodSplatTimer_timeout"]
